--- a/quarterly-vs-yearly-vs-lifetime-vs-modal.html
+++ b/quarterly-vs-yearly-vs-lifetime-vs-modal.html
@@ -35,7 +35,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="row no-gutters justify-content-center justify-content-xl-end mt-3 pt-3 pb-sm-5">
+				<div class="row no-gutters justify-content-center justify-content-xl-end mt-3 pt-3 pb-sm-4">
 					<div class="col-md-10 col-lg-5 col-xl-5">
 						<div class="optimize optimize-4">
 							<div class="row row-2 align-items-center">
@@ -84,7 +84,11 @@
 			</div>
 			<div class="platinum-green">
 				<div class="container">
-					<div class="fz-24 font-weight-bold pb-5">Improve Your Body Faster, Prevent Your Biggest Risks, and More.</div>
+					<div class="row justify-content-center">
+						<div class="col-lg-5">
+							<div class="fz-24 font-weight-bold">Improve Your Body Faster, Prevent Your Biggest Risks, and More.</div>
+						</div>
+					</div>
 					<div class="row justify-content-center mt-5">
 	          <div class="col-md-4 pb-5">
 	            <img src="img/oto-platinum/orange-1.svg" alt="">
@@ -94,7 +98,7 @@
 	          <div class="col-md-4 pb-5">
 	            <img src="img/oto-platinum/orange-2.svg" alt="">
 	            <div class="fz-18 font-weight-bold py-3">Instantly unlock your COVID-19, Disease, and Carrier Reports</div>
-	            <div class="fz-16">Discover your risks for COVID-19 and other potentially life-threatening diseases, including Parkinson’s, Alzheimer’s, and more. Plus, learn what conditions you might pass on to your children. See all traits.</div>
+	            <div class="fz-16">Discover your risks for COVID-19 and other potentially life-threatening diseases, including Parkinson’s, Alzheimer’s, and more. Plus, learn what conditions you might pass on to your children.<br><a href="#!" class="link-yellow" data-toggle="modal" data-target="#modal">See all traits.</a></div>
 	          </div>
 	          <div class="col-md-4 pb-5">
 	            <img src="img/oto-platinum/orange-10.svg" alt="">
@@ -116,41 +120,29 @@
 			</div>
 		</section>
 
-		<section class="text-gray-2 bg-white py-5 text-center">
-			<div class="container">
-				<div class="row justify-content-center">
-					<div class="col-sm-10 col-lg-6">
-						<h4 class="fz-22 text-gray-2 pt-2 mb-3">Discover how you can use your genetic insights to take action on your health.</h4>
-						<p class="fz-18">We encourage you to review all the relevant information in your reports that can have a great impact on your health and life.</p>
-						<a href="#!" class="btn btn-orange mt-3" data-toggle="modal" data-target="#modal">Get Started Now!</a>
-					</div>
-				</div>
-			</div>
-		</section>
-
-		<section class="section text-gray-3 fz-12">
+		<section class="section text-gray-3 py-5" id="plans">
 			<div class="container">
 
-				<div class="row align-items-end justify-content-center">
+				<div class="row align-items-end justify-content-center pt-4">
 					<div class="col-md-6 col-lg-5 col-xl-4 mb-5">
-						<div class="card card-card card-orange">
+						<div class="card card-card card-orange card-orange-3">
 							<div class="fz-24 text-black font-weight-bold mb-1">Quarterly Plan</div>
-							<div class="bg-bg fz-45 text-black mb-3">$8<span class="fz-18 text-gray ml-1">/month</span></div>
-							<ul class="list-check list-check-2 list-check-3 d-inline-block text-left pb-4 fz-18">
+							<div class="bg-bg fz-45 text-black mb-4">$8<span class="fz-18 text-gray ml-1">/month</span></div>
+							<ul class="list-check list-check-2 list-check-3 d-inline-block text-left pb-4">
 								<li class="mb-2">1-on-1 consultation.</li>
 								<li class="mb-2">Unlimited updates.</li>
 								<li class="mb-2">FREE additional traits</li>
 								<li class="mb-2">Disease Report - unlock instantly!</li>
-								<li class="mb-2">Carrier Trait Report (coming in 2020).</li>
+								<li class="mb-2">Carrier Trait Report - available now.</li>
+								<li class="mb-2">FREE COVID-19 Report.</li>
 								<li class="mb-2">FREE membership to our exclusive community.</li>
+								<li class="mb-2">FREE subscription to the LifeDNA Genomics Newsletter.</li>
+								<li class="mb-2">FREE access to the LifeDNA Nutrition App (coming soon!)</li>
 								<li class="mb-2">VIP customer service.</li>
 								<li class="mb-2">No commitment.</li>
-								<li class="mb-2">Quarterly payments.</li>
+								<li class="mb-2 font-weight-bold">Quarterly payments.</li>
 							</ul>
-							<div class="position-relative">
-								<img src="img/oto-platinum/triangle-orange.svg" alt="" class="triangle-orange">
-								<a href="#!" class="btn btn-orange btn-block mt-5 mt-md-3">Get Started Now!</a>
-							</div>
+							<a href="#!" class="btn btn-orange btn-block py-2">Join Now</a>
 							<div class="row justify-content-center mt-4">
 								<div class="col-11 fz-13">*By clicking the button you will be charged <b>$25 quarterly.</b></div>
 							</div>
@@ -158,24 +150,24 @@
 					</div>
 					<div class="col-md-6 col-lg-5 col-xl-4 mb-5">
 						<div class="most-pop-2 most-pop-3">MOST POPULAR</div>
-						<div class="card card-card card-orange">
+						<div class="card card-card card-orange card-orange-3">
 							<div class="fz-24 text-black font-weight-bold mb-1">Yearly Plan</div>
-							<div class="bg-bg fz-45 text-black mb-3">$5<span class="fz-18 text-gray ml-1">/month</span></div>
-							<ul class="list-check list-check-2 list-check-3 d-inline-block text-left pb-4 fz-18">
+							<div class="bg-bg fz-45 text-black mb-4">$5<span class="fz-18 text-gray ml-1">/month</span></div>
+							<ul class="list-check list-check-2 list-check-3 d-inline-block text-left pb-4">
 								<li class="mb-2">1-on-1 consultation.</li>
 								<li class="mb-2">Unlimited updates.</li>
 								<li class="mb-2">FREE additional traits</li>
 								<li class="mb-2">Disease Report - unlock instantly!</li>
-								<li class="mb-2">Carrier Trait Report (coming in 2020).</li>
+								<li class="mb-2">Carrier Trait Report - available now.</li>
+								<li class="mb-2">FREE COVID-19 Report.</li>
 								<li class="mb-2">FREE membership to our exclusive community.</li>
+								<li class="mb-2">FREE subscription to the LifeDNA Genomics Newsletter.</li>
+								<li class="mb-2">FREE access to the LifeDNA Nutrition App (coming soon!)</li>
 								<li class="mb-2">VIP customer service.</li>
 								<li class="mb-2">No commitment.</li>
-								<li class="mb-2">Save $48 a year!</li>
+								<li class="mb-2 font-weight-bold">Save $48 a year!</li>
 							</ul>
-							<div class="position-relative">
-								<img src="img/oto-platinum/triangle-orange.svg" alt="" class="triangle-orange">
-								<a href="#!" class="btn btn-orange btn-block mt-5 mt-md-3">Get Started Now!</a>
-							</div>
+							<a href="#!" class="btn btn-orange btn-block py-2">Join Now</a>
 							<div class="row justify-content-center mt-4">
 								<div class="col-11 fz-13">*By clicking the button you will be charged <b>$60 yearly.</b></div>
 							</div>
@@ -183,24 +175,24 @@
 					</div>
 					<div class="col-md-6 col-lg-5 col-xl-4 mb-5">
 						<div class="most-pop-2">LIMITED TIME OFFER</div>
-						<div class="card card-card card-orange">
+						<div class="card card-card card-orange card-orange-3">
 							<div class="fz-24 text-black font-weight-bold mb-1">Lifetime Plan</div>
-							<div class="bg-bg fz-45 text-black mb-3">$199</div>
-							<ul class="list-check list-check-2 list-check-3 d-inline-block text-left pb-4 fz-18">
+							<div class="bg-bg fz-45 text-black mb-4">$199</div>
+							<ul class="list-check list-check-2 list-check-3 d-inline-block text-left pb-4">
 								<li class="mb-2">1-on-1 consultation.</li>
 								<li class="mb-2">Unlimited updates.</li>
 								<li class="mb-2">FREE additional traits</li>
 								<li class="mb-2">Disease Report - unlock instantly!</li>
-								<li class="mb-2">Carrier Trait Report (coming in 2020).</li>
+								<li class="mb-2">Carrier Trait Report - available now.</li>
+								<li class="mb-2">FREE COVID-19 Report.</li>
 								<li class="mb-2">FREE membership to our exclusive community.</li>
+								<li class="mb-2">FREE subscription to the LifeDNA Genomics Newsletter.</li>
+								<li class="mb-2">FREE access to the LifeDNA Nutrition App (coming soon!)</li>
 								<li class="mb-2">VIP customer service.</li>
-								<li class="mb-2">Lifetime membership</li>
-								<li class="mb-2">Save $60 a year!</li>
+								<li class="mb-2">Lifetime membership.</li>
+								<li class="mb-2 font-weight-bold">Save $60 a year!</li>
 							</ul>
-							<div class="position-relative">
-								<img src="img/oto-platinum/triangle-orange.svg" alt="" class="triangle-orange">
-								<a href="#!" class="btn btn-orange btn-block mt-5 mt-md-3">Get Started Now!</a>
-							</div>
+							<a href="#!" class="btn btn-orange btn-block py-2">Join Now</a>
 							<div class="row justify-content-center mt-4">
 								<div class="col-11 fz-13">*By clicking the button you will be charged <b>$199.</b></div>
 							</div>
@@ -208,12 +200,34 @@
 					</div>
 				</div>
 
-				<div class="row justify-content-center pb-5">
+				<div class="row justify-content-center pb-2">
 					<div class="col-auto">
 						<a href="#!" class="no-thanks"><u>No thanks.</u></a>
 					</div>
 				</div>
-				<div class="row justify-content-center mb-5 pb-4">
+			</div>
+		</section>
+
+		<section class="text-gray-2 bg-white py-5 text-center">
+			<div class="container">
+				<div class="row justify-content-center">
+					<div class="col-sm-10 col-lg-6">
+						<h4 class="fz-22 text-gray-2 pt-2 mb-3">Discover how you can use your genetic insights to take action on your health.</h4>
+						<p class="fz-18">We encourage you to review all the relevant information in your reports that can have a great impact on your health and life.</p>
+						<div class="row justify-content-center">
+							<div class="col-sm-6">
+								<a href="#!" class="btn btn-orange btn-block mt-3 py-2">Learn More</a>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
+
+		<section class="section text-gray-3 py-5">
+			<div class="container">
+
+				<div class="row justify-content-center mb-5">
 					<div class="col-md-9">
 						<div class="card card-card text-left pr-lg-4">
 							<div class="form-row">
@@ -221,8 +235,7 @@
 									<img src="img/oto-platinum/icon-4.svg" alt="">
 								</div>
 								<div class="col fz-16">
-									<h5 class="mb-4 lh-1-4">Disclaimer for Disease Report Carrier Status Report</h5>
-									<p class="fz-16">The Disease report primarily provides information on an individual’s risk for specific diseases by identifying the presence of genetic variants, which are associated with an increased risk for developing certain diseases.</p>
+									<p>The Disease report primarily provides information on an individual’s risk for specific diseases by identifying the presence of genetic variants, which are associated with an increased risk for developing certain diseases.</p>
 									<div class="collapse-1 collapse">
 										<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum dolore, rerum obcaecati libero a sit odit, iure tempora! Corrupti sint commodi iste, accusamus neque optio cum, placeat. Sit, delectus ipsum.</p>
 										<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis maxime non fugit obcaecati, cupiditate corrupti quod natus rem at, in ratione omnis ab porro. Iste nobis error sit quia sunt.</p>
@@ -258,6 +271,7 @@
 						<div class="text-center text-md-right"><div><a href="#!" class="link-inh">Terms & Conditions</a></div></div>
 					</div>
 				</div>
+
 			</div>
 		</section>
 
@@ -290,7 +304,7 @@
 						<div class="tab-pane fade" id="covid-19">
 							<div class="modal-content-body">
 								<h5 class="bb-2 pb-4">Covid-19 Traits (up to 11 traits)</h5>
-			 					<div class="table-responsive">
+			 					<div class="table-responsive pb-3 bb-2">
 									<table class="table table-modal table-borderless">
 										<thead>
 											<tr>
@@ -342,6 +356,15 @@
 										</tbody>
 									</table>
 								</div>
+								<div class="row align-items-center mt-5">
+									<div class="col-md">
+										<h5>Ready to Unlock Your Exclusive Reports?</h5>
+										<div>Click the button below to choose the Platinum plan that works best for you.</div>
+									</div>
+									<div class="col-md-auto">
+										<a href="#plans" class="btn btn-orange btn-block py-2 mt-4 scroll-to-plans scroll-to-plans-no-header" data-dismiss="modal">See Plans Options Now</a>
+									</div>
+								</div>
 							</div>
 							<div class="modal-content-bottom">
 								<div class="pb-3">* Lorem, ipsum, dolor sit amet consectetur adipisicing elit. Numquam animi suscipit delectus quis alias praesentium autem ullam? Eius, consequatur nemo, expedita illum iure porro laborum voluptates sapiente nam veritatis, aperiam.</div>
@@ -362,7 +385,7 @@
 						<div class="tab-pane fade show active" id="carrier">
 							<div class="modal-content-body">
 								<h5 class="bb-2 pb-4">Carrier Traits (up to 11 traits)</h5>
-			 					<div class="table-responsive">
+			 					<div class="table-responsive pb-3 bb-2">
 									<table class="table table-modal table-borderless">
 										<thead>
 											<tr>
@@ -418,6 +441,15 @@
 										</tbody>
 									</table>
 								</div>
+								<div class="row align-items-center mt-5">
+									<div class="col-md">
+										<h5>Ready to Unlock Your Exclusive Reports?</h5>
+										<div>Click the button below to choose the Platinum plan that works best for you.</div>
+									</div>
+									<div class="col-md-auto">
+										<a href="#plans" class="btn btn-orange btn-block py-2 mt-4 scroll-to-plans scroll-to-plans-no-header" data-dismiss="modal">See Plans Options Now</a>
+									</div>
+								</div>
 							</div>
 							<div class="modal-content-bottom">
 								<div class="pb-3">
@@ -441,7 +473,7 @@
 						<div class="tab-pane fade" id="disease">
 							<div class="modal-content-body">
 								<h5 class="bb-2 pb-4">Disease Traits (up to 11 traits)</h5>
-			 					<div class="table-responsive">
+			 					<div class="table-responsive pb-3 bb-2">
 									<table class="table table-modal table-borderless">
 										<thead>
 											<tr>
@@ -496,6 +528,15 @@
 											</tr>
 										</tbody>
 									</table>
+								</div>
+								<div class="row align-items-center mt-5">
+									<div class="col-md">
+										<h5>Ready to Unlock Your Exclusive Reports?</h5>
+										<div>Click the button below to choose the Platinum plan that works best for you.</div>
+									</div>
+									<div class="col-md-auto">
+										<a href="#plans" class="btn btn-orange btn-block py-2 mt-4 scroll-to-plans scroll-to-plans-no-header" data-dismiss="modal">See Plans Options Now</a>
+									</div>
 								</div>
 							</div>
 							<div class="modal-content-bottom">
