--- a/test-info-separation-page.html
+++ b/test-info-separation-page.html
@@ -34,9 +34,15 @@
 			</div>
 		</nav>
 
-		<section class="section text-center">
-			<div class="container mt-4">
-				<div class="row justify-content-center">
+		<section class="section text-center pt-5">
+			<div class="container">
+				<div class="text-left">
+					<a href="#!" class="back fz-16">
+						<img src="img/art/arrow-art2.svg" alt="" width="15">
+						<span class="align-middle ml-1">Go Back</span>
+					</a>
+				</div>
+				<div class="row justify-content-center pt-5 mt-3">
 					<div class="col-lg-6">
 						<h3 class="mb-4">Explore Your Exclusive Genetic Health Reports:</h3>
 						<p class="fz-16">Discover all the powerful information you can find in your COVID-19, Disease, and Carrier reports. Get insights and recommendations on how you can use your genetic results to make smarter choices in your health</p>	
