--- a/step-1.html
+++ b/step-1.html
@@ -99,15 +99,12 @@
 								<div class="row align-items-center">
 									<div class="col-md mb-4 mb-md-0 fz-16 text-black text-center text-md-left">Are you ready to see your LifeDNA Reports now? Check the box of your answer in order to continue.</div>
 									<div class="col-md">
-										<div class="form-row fz-14 align-items-center text-center">
-											<div class="col-lg mb-3 mb-lg-0">
+										<div class="form-row justify-content-center fz-14 align-items-center text-center">
+											<div class="col-lg-4 mb-3 mb-lg-0">
 												<button class="btn btn-success btn-block font-weight-normal py-2">Yes</button>
 											</div>
-											<div class="col-lg mb-3 mb-lg-0">
+											<div class="col-lg-4 mb-3 mb-lg-0">
 												<button class="btn btn-outline-success btn-block font-weight-normal green py-2">No</button>
-											</div>
-											<div class="col-lg-auto">
-												<a href="#!" class="text-gray-2">I am not sure yet</a>
 											</div>
 										</div>
 									</div>
