--- a/VSL-OTO.html
+++ b/VSL-OTO.html
@@ -11,13 +11,18 @@
 	</head>
 	<body class="bg-transparent">
 
-		<nav class="navbar navbar-light bg-white sticky-top navbar-expand-lg shadow-oto">
+		<nav class="navbar navbar-light bg-white sticky-top navbar-expand-lg shadow-none">
 			<div class="container justify-content-center">
 				<a class="navbar-brand mr-0" href="home.html">
 					<img src="img/logo.svg" alt="">
 				</a>
 			</div>
 		</nav>
+
+		<div class="oto-warning-top text-center py-3">
+			<img src="img/oto/warning-icon.svg" alt="" class="align-middle">
+			<span class="align-middle ml-2"><span class="font-weight-bold">Wait!</span> Here's an exclusive offer for you</span>
+		</div>
 
 		<header class="header header-oto">
 			<div class="container">
@@ -34,9 +39,21 @@
 			<div class="container">
 				<div class="row justify-content-center">
 					<div class="col-md-10">
-						<a href="#!">
+						<div class="position-relative">
 							<img src="img/oto/macbook.svg" alt="">
-						</a>
+							<div class="div-insight-img">
+								<div class="embed-responsive embed-responsive-16by9 embed-oto">
+									<video src="videos/bunner.mp4" class="object-cover" controls></video>
+									<div class="embed-responsive-item" style="background-image: url(img/video.jpg)">
+										<a href="#!" class="play-button white"></a>
+										<div class="oto-warning text-center">
+											<img src="img/oto/sound.svg" alt="" class="align-middle">
+											<span class="align-middle ml-1"><span class="font-weight-bold">Make sure the sounds is Turned ON!</span> (Please wait for the video to fully load)</span>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
 					</div>
 				</div>
 			</div>
